--- a/VM/VM.csproj
+++ b/VM/VM.csproj
@@ -2,28 +2,19 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <LangVersion>preview</LangVersion>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <WarningLevel>4</WarningLevel>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-  </PropertyGroup>
   <ItemGroup>
-    <None Remove="VM\" />
-    <None Remove="VM\Interfaces\" />
-    <None Remove="VM\Implementations\" />
-    <None Remove="VM\Implementations\Memory\" />
+    <None Remove="VM\Exceptions\" />
+    <None Remove="VM\Extensions\" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="VM\" />
-    <Folder Include="VM\Interfaces\" />
-    <Folder Include="VM\Implementations\" />
-    <Folder Include="VM\Implementations\Memory\" />
+    <Folder Include="VM\Exceptions\" />
+    <Folder Include="VM\Extensions\" />
   </ItemGroup>
 </Project>
